--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "description": "Waltz-controls core plugin",
   "main": "dist/index.js",
   "source": "src/core.js",
-  "watch": {
-    "build": "{src,test}/*.js"
-  },
+  "module": "dist/index.esm.js",
   "scripts": {
     "clean": "rm -rf dist",
-    "package": "node ./maven-deploy.config.js",
-    "deploy": "curl -T $npm_package_main -H \"Authorization:Basic ${BINTRAY_AUTH_TOKEN}\" https://api.bintray.com/content/waltz-controls/libs/$npm_package_name/$npm_package_version/$npm_package_name/$npm_package_version/index.js",
-    "build": "mkdir -p dist && cp src/eventbus.js dist/index.js",
-    "watch": "npm-watch"
+    "build": "rollup -c",
+    "watch": "rollup -c -w"
   },
   "repository": {
     "type": "git",
@@ -30,13 +26,15 @@
   },
   "homepage": "https://github.com/waltz-controls/waltz-core#readme",
   "devDependencies": {
-    "acorn": "^7.1.0",
-    "maven-deploy": "^1.5.0",
-    "mocha": "^6.2.2",
-    "npm-watch": "^0.6.0"
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-multi-entry": "^3.0.0",
+    "@rollup/plugin-node-resolve": "^7.1.2",
+    "rollup": "^2.6.0"
   },
   "publishConfig": {
     "registry": "https://api.bintray.com/npm/waltz-controls/npm"
   },
-  "dependencies": {}
+  "dependencies": {
+    "rxjs": "^6.5.5"
+  }
 }
