--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "waltz-core",
-  "version": "0.0.1",
+  "name": "@waltz-controls/core",
+  "version": "1.0.0",
   "description": "Waltz-controls core plugin",
   "main": "dist/index.js",
   "source": "src/core.js",
