--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/waltz-controls/eventbus.git"
+    "url": "git+https://github.com/waltz-controls/core.git"
   },
   "keywords": [
     "waltz",
@@ -22,9 +22,9 @@
   "author": "Ingvord",
   "license": "Apache 2.0",
   "bugs": {
-    "url": "https://github.com/waltz-controls/waltz-core/issues"
+    "url": "https://github.com/waltz-controls/core/issues"
   },
-  "homepage": "https://github.com/waltz-controls/waltz-core#readme",
+  "homepage": "https://github.com/waltz-controls/core#readme",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-multi-entry": "^3.0.0",
