--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@waltz-controls/middleware",
-  "version": "1.2.1",
-  "description": "Waltz-controls core plugin",
+  "version": "1.2.2",
+  "description": "Waltz-controls middleware plugin",
   "main": "dist/index.js",
   "source": "src/core.js",
   "module": "dist/index.esm.js",
