--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -22,7 +22,7 @@ jobs:
           documentation build src/** -f html --github -o docs
      
       - name: push back
-        run:
+        run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add docs/**
